# ulabel

./: .editorconfig  .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  api_spec.md  changelog.md  demo.js  eslint.config.mjs  index.d.ts  jest.config.js  package-lock.json  package.json  playwright.config.js  pull_request_template.md  tsconfig.json  tsconfig.types.json  webpack.config.js
.github/: copilot-instructions.md  tasks.md
demo/: box-roi.html  demo.html  frames.html  getset.html  kits21.html  live_demo.html  multi-class.html  multi_class.html  multiclass.html  rdme_demo.html  resume-from.html  resume_from.html  row-filtering-example.html  server.js  single-class.html  single_class.html  subtasks.html  three_dims.html
local/: browse.html  server.js  ulabel.html
sagemaker/: create_template.py  template.liquid.html  ulabel-0.0.1.liquid.html  ulabel-0.0.2-dev.liquid.html  ulabel-0.0.3-dev.liquid.html  ulabel-0.0.5-dev.liquid.html  use_ulabel.css  use_ulabel.js
scripts/: emit-type-shims.js
src/: actions.ts  ambient.d.ts  annotation.js  annotation.ts  annotation_operators.js  annotation_operators.ts  blobs.d.ts  blobs.js  canvas_utils.ts  colors.ts  comment.ts  configuration.js  configuration.ts  cookies.ts  drawing_utilities.js  drawing_utilities.ts  error_handling.ts  error_logging.ts  geometric_utils.js  geometric_utils.ts  html_builder.js  html_builder.ts  index.d.ts  index.js  index.ts  initializer.ts  loader.ts  (+11 more)
ulabel_local/dbapi/: pyproject.toml
ulabel_local/dbapi/dbapi/: api.py
ulabel_local/dbapi/tests/: test_dbapi.py
(+69 files in other folders)
