[tool.poetry]
name = "dbapi"
version = "0.1.0"
description = "A compatibility layer between ULabel's local services and analytics_db"
authors = ["Nicholas Heller <helle246@umn.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
analytics_db = {git = "ssh://git@github.com/SenteraLLC/py-analytics-db.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dbapi = "dbapi.api:api"